fix menu too wide

--- a/css/app.scss
+++ b/css/app.scss
@@ -81,8 +81,6 @@ a {
   background-color: #348eda;
   color: #fff;
   a {
-    -webkit-transition: all .3s;
-    transition: all .3s;
     color: #fff;
   }
   a.textlink {
